--- a/style.css
+++ b/style.css
@@ -49,6 +49,14 @@ body {
   border: 3px solid #803fe2; /* Optional border */
 }
 
+.profile-picture {
+  width: 150px; /* Adjust width as needed */
+  height: auto; /* Maintain aspect ratio */
+  border-radius: 50%; /* Optional, makes the photo round */
+  margin-right: 50%; /* Add space between the photo and text */
+  float: middle; /* Position the image to the left */
+}
+
 .block1 {
   display: grid;
   max-width: 900px;
